<resources>
    <string name="app_name">Metronome</string>
    <string name="start_button">PLAY</string>
    <string name="stop_button">STOP</string>
    <string name="decrease_button">-</string>
    <string name="increase_button">+</string>
    <string name="bpm_display">BPM</string>
    <string name="tempo_display">120</string>
    <string name="auto_hint"> </string>
    <string name="settings_button">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_title">Settings</string>
    <string name="back">Back</string>
    <string name="_1">1</string>
    <string name="_3_4">3/4</string>
    <string name="_4_4">4/4</string>
    <string name="_5_4">5/4</string>
    <string name="time_signature">Time Signature</string>
    <string name="tick">Tick</string>
    <string name="beep">Beep</string>
    <string name="beat_sound">Beat Sound</string>
    <string name="tom">Tom</string>
    <string name="snare">Snare</string>
    <string name="block">Block</string>
</resources>